-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 9.0.0-beta1
-
None
-
-
37640257db (qt-creator/qt-creator/master) 37640257db (qt-creator/qt-creator/qds/dev)
Search results are shown as green lines in the right scrollbar of the source editor to indicate the relative vertical position of a line with a hit in relation to the whole vertical extend of the source file.
When sliding the scrollbar the green indicator lines move strongly, when the slider overlaps with positions.
This is a reqression to Qt Creator 8.0.1.
The positions of the indicators should be the same, independent of the position of the slider.
Screenshots while moving the slider down from top to bottom. You can see that the positions of the search indicater move.