Editor: Fix painting highlights on scrollbar

The document layout rounds up the height of lines in
QTextLayout::boundingRect, so we have to do the same for calculating the
position of highlights on the scrollbar.

Fixes: QTCREATORBUG-28299
Change-Id: I36496ebec7fe7861feff7cb8a2647a11ee078b8f
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>